--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,5 +1,10 @@
 /* app css stylesheet */
 
+html, body {
+  height: 100%;
+  text-align: center;
+}
+
 .menu {
   list-style: none;
   border-bottom: 0.1em solid black;
@@ -57,4 +62,16 @@
   stroke-opacity: .5;
   stroke-width: 1.25px;
   pointer-events: none;
+}
+
+#map {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+#controls {
+  position: absolute;
+  bottom: 10px;
+  margin: 0 auto;
 }
