--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,8 +1,34 @@
 /* app css stylesheet */
 
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300,600);
+
 html, body {
   height: 100%;
   text-align: center;
+  
+}
+
+* {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+}
+
+p, h1 {
+  margin: 0;
+  padding: 0;
+}
+
+h1 {
+  font-size: large;
+  font-weight: 600;
+}
+
+a, a:visited {
+  color: hsl(206, 50%, 50%);
+}
+
+a:hover {
+  color: hsl(206, 100%, 50%);
 }
 
 .menu {
@@ -65,16 +91,16 @@ html, body {
 }
 
 #map-container {
-  position: relative;
+  position: absolute;
   width: 100%;
   height: 100%;
+  border-bottom: 1px dotted rgb(220, 220, 220);
 }
 
 #controls {
   position: absolute;
   bottom: 10px;
   left: 10px;
-  margin: 0 auto;
 }
 
 .panel {
@@ -82,4 +108,34 @@ html, body {
   border: 1px solid rgb(220, 220, 220);
   box-shadow: 0 5px 10px 1px rgba(0, 0, 0, 0.5);
   padding: 10px;
+}
+
+#title {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  max-width: 500px;
+}
+
+#splash {
+  width: 100%;
+  height: 100%;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
+  background-color: hsl(206,50%,90%);
+  z-index: 10;
+}
+
+#page {
+  padding: 1em 3em 3em 3em;
+  font-size: large;
+  z-index: -10;
+}
+
+#page h1 {
+  font-size: xx-large;
+  padding: 1em 0;
+}
+
+#page p {
+  padding: 1em;
 }
