Made the popup and the residing svg element an appropriate size relative to the browser window

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -90,6 +90,11 @@ a:hover {
   pointer-events: none;
 }
 
+.ngdialog-theme-default .ngdialog-content{
+  width: 80% !important;
+  height: 80% !important;
+}
+
 #map-container {
   position: absolute;
   width: 100%;
