--- a/app/css/app.css
+++ b/app/css/app.css
@@ -95,6 +95,12 @@ a:hover {
   height: 80% !important;
 }
 
+.popup-container{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
 #map-container {
   position: absolute;
   width: 100%;
