--- a/app/css/app.css
+++ b/app/css/app.css
@@ -119,7 +119,7 @@ a:hover {
   position: absolute;
   top: 10px;
   right: 10px;
-  max-width: 500px;
+  width: 500px;
 }
 
 #splash {
@@ -143,4 +143,16 @@ a:hover {
 
 #page p {
   padding: 1em;
+}
+
+.minimize-icon {
+  position: absolute;
+  top: 5%;
+  right: 1%;
+}
+
+.maximize-icon {
+  position: absolute;
+  top: 20%;
+  right: 1%;
 }
