Fixed slider axis text style override with nvd3.css

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -82,6 +82,12 @@ a:hover {
   stroke-linecap: round;
 }
 
+.axis text{
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+  font-size: 10px;
+}
+
 .slider .handle {
   fill: #fff;
   stroke: #000;
