--- a/app/css/app.css
+++ b/app/css/app.css
@@ -130,6 +130,7 @@ a:hover {
   border: 1px solid rgb(220, 220, 220);
   box-shadow: 0 5px 10px 1px rgba(0, 0, 0, 0.5);
   padding: 10px;
+  width: 500px;
 }
 
 #title {
