--- a/app/css/app.css
+++ b/app/css/app.css
@@ -180,3 +180,9 @@ a:hover {
   top: 13%;
   left: 3%;
 }
+
+/*Minor override of NVD3 tooltip CSS*/
+.nvtooltip {
+    margin-top: 9%;
+    margin-left: 18%;
+}
