Changed popup to include directive data updates. That works fine, but the in-page binding is less happy for some reason. Country names fail to appear!

--- a/app/partials/countryPopup.html
+++ b/app/partials/countryPopup.html
@@ -1,8 +1,8 @@
 <div class="popup-container">
 	<div class="ngdialog-message">
 		<div>
-			<h2>Commits from {{country.current_country}}</h2>
+			<h2>Commits from {{nvd3CompatibleCountryData.currentCountry}}</h2>
 		</div>
 	</div>
-	<country-graph country='country'></country-graph>
+	<country-graph nvd3-compatible-country-data='nvd3CompatibleCountryData'></country-graph>
 </div>
